@@ -42,6 +42,9 @@ For [Jetty](https://www.eclipse.org/jetty/) we the following versions: 9.4.x. Ne
 
         You need to ensure Tomcat is configured with enough memory for GeoNetwork to launch. This can be be configured via the `setenv` script in tomcat with the appropriate memory for the JAVA_OPTS property). `-Xms2g -Xmx2g` is usually fine.
 
+    !!! note
+
+        For the  `/monitor/metrics` endpoint to work correctly, you must add to `JAVA_OPTS` the following option: `--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED` 
 
 4.  Configure the search platform
 
